still debuging this shii

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -154,8 +154,8 @@ text-align: center;
 
         </div>
             <div class="well-searchbox">
-		<h1> <font color="green"> SEARCH FOR POSTS </h1></font>
-            	<h2> <font color="green">Software Solutions in Nigeria and Africa</h2></font>
+		<h1> <font color="white"> SEARCH FOR POSTS </h1></font>
+            	<h2> <font color="white">Software Solutions in Nigeria and Africa</h2></font>
                 <form class="form-horizontal" role="form" method="post">
                     <div class="form-group">
                         <label class="col-md-4 control-label">Keyword</label>
