--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,107 +1,88 @@
 <!-- views/partials/navbar.ejs -->
 
-<html lang="en">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" dir="ltr">
-<head>
- <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
-
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <meta name="google" value="notranslate">
-  <title>Afrihub</title>
-
-
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-
-
 <style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+body, html {
+    height: 100%;
+    line-height: 1.8;
 }
-
-.topnav {
-  overflow: hidden;
-  background-color: #213;
+/* Full height image header */
+.bgimg-1 {
+    background-position: center;
+    background-size: cover;
+    background-image: url("/img/IT.jpg");
+    min-height: 100%;
 }
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+.w3-bar .w3-button {
+    padding: 16px;
 }
 </style>
-
-
 <body>
 
-<div class="topnav" id="myTopnav">
-  <a class="active" href="/">Afrihub</a>
-  <a href="/posts">Posts</a>
-  <a class="active" href="/postad" style="float:right">Post ad</a>
-<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-	<div class="search-container">
-    <form action="/search" method="post">
-      <input type="text" placeholder="Search.." name="search" required>
-      <button type="submit"><i class="fa fa-search"></i></button>
-    </form>
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-card" id="myNavbar">
+    <a href="/" class="w3-bar-item w3-button w3-wide">MYAFRIHUB</a>
+    <!-- Right-sided navbar links -->
+    <div class="w3-center w3-hide-small">
+      <a href="/posts" class="w3-bar-item w3-button"><i class="fa fa-user"></i> POSTS</a>
+      <a href="/postad" class="w3-bar-item w3-button"><i class="fa fa-th"></i> POST ADS</a>
+      <a href="/about" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> About</a>
+    </div>
+    <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
+    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
+      <i class="fa fa-bars"></i>
+    </a>
   </div>
-  
 </div>
 
+<!-- Sidebar on small screens when clicking the menu icon -->
+<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+  <a href="/" onclick="w3_close()" class="w3-bar-item w3-button">Afrihub</a>
+  <a href="/posts" onclick="w3_close()" class="w3-bar-item w3-button">Posts</a>
+  <a href="/postad" onclick="w3_close()" class="w3-bar-item w3-button">Post Ad</a>
+
+</nav>
 
 
 <script>
+
+
+// Modal Image Gallery
+function onClick(element) {
+  document.getElementById("img01").src = element.src;
+  document.getElementById("modal01").style.display = "block";
+  var captionText = document.getElementById("caption");
+  captionText.innerHTML = element.alt;
+}
+
+
+// Toggle between showing and hiding the sidebar when clicking the menu icon
+var mySidebar = document.getElementById("mySidebar");
+
+function w3_open() {
+    if (mySidebar.style.display === 'block') {
+        mySidebar.style.display = 'none';
+    } else {
+        mySidebar.style.display = 'block';
+    }
+}
+
+// Close the sidebar with the close button
+function w3_close() {
+    mySidebar.style.display = "none";
+}
+
 function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
+    var x = document.getElementById("mySidebar");
+    if (x.className === "mySidebar") {
         x.className += " responsive";
     } else {
         x.className = "topnav";
