--- a/views/postad.ejs
+++ b/views/postad.ejs
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -92,11 +98,12 @@ body {
   background: rgba(50, 50, 50, 0.5);
 }
 </style>
+        <%- include('partials/navbar') %>
 <body>
     <div class="container">
-        <%- include('partials/navbar') %>
         <div class="row">
             <div class="col-lg-6 col-md-offset-3">
+                <h1>POST AD</h1>
                 <h1>Add a New ad</h1>
                 <form method="post">
                     <div class="panel panel-default">
@@ -147,7 +154,7 @@ body {
                 </form>
             </div>
         </div>
- 	<%- include('partials/footer') %>
     </div>
+ 	<%- include('partials/footer') %>
 </body>
 </html>
