--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<link href="search-filter.css" rel="stylesheet">
 
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
@@ -33,7 +32,7 @@ body, html {
 .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url("/img/infotech.jpg");
+    background-image: url("/img/IT.jpg");
     min-height: 100%;
 }
 .w3-bar .w3-button {
@@ -134,8 +133,12 @@ body {
 
 
        <%- include('partials/navbar') %>
-<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-  <div class="w3-display-left w3-text-white" style="padding:48px">
+
+
+<body>
+
+<div class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
+  <div class="w3-display-left w3-text-white" style="padding:50px">
     <span class="w3-jumbo w3-hide-small">A Hub For IT Professionals</span><br>
 <span class="w3-large">Find IT professionals and their services in your area</span>
 <p class="w3-large">Advertise your Skills and IT services</p>
@@ -151,20 +154,12 @@ body {
     </form>
   </div>
 </div>
+
 <button class="openBtn" onclick="openSearch()">Search for posts</button>
 <p><a href="/posts" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">View Posts</a></p>
   </div> 
-  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-</header>
+</div>
 
-<body>
 
 		
        <%- include('partials/footer') %>
