looks and icons

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Afrihub</title>
+    <title>My Afrihub</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 <style>
@@ -119,11 +119,11 @@ text-transform: none;
 	<h2> <font color="green"> About us: </h2></font>
 	<p> We are an online Tech hub where people can find and advertise skills, goods, services and expertise in computers and information technology sector. It is a place where you can interact with and find software programmers, database administrators, web designers, game developers, system analysts, cisqo and hardware specialists, computer technicians and tech solutions in Nigeria.</p>
 
-	<p>You can find computer programmers, web designers, database administrators from anywhere in Nigeria, Africa and North-America to source your source-code production at cheap and affordable rates. </p>
+	<p>You can find computer programmers, web designers, database administrators from anywhere in Nigeria, Africa and North-America to source your source-code production at cheap and affordable rates. You can also post an advert showcasing your skills and services</p>
 
 
 	<h3> <font color="green"> Our Goal: </h3></font>
-	<p> We focus on bringing computer software, and technology solutions closer to ordinary people, small-time business establishments, co-operations, organizations and institutions. We focus on becoming the No.1 place for technology solutions in Nigeria, and Africa. </p> 
+	<p> We focus on bringing computer software, and technology solutions closer to ordinary people, small-time business establishments, co-operations, organizations and institutions. We focus on becoming the No.1 place for software technology solutions in Nigeria, Africa and the world. </p> 
 
     </div>
     </div>
