--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Afrihub</title>
+    <title>My Afrihub</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -33,7 +33,7 @@ body, html {
     background-position: center;
     background-size: cover;
     background-image: url("/img/IT.jpg");
-    min-height: 100%;
+    min-height: 50%;
 }
 .w3-bar .w3-button {
     padding: 16px;
@@ -56,7 +56,7 @@ body {
 }
 
 .openBtn {
-    background: black;
+    background: blue;
     border: none;
     padding: 10px 15px;
     font-size: 20px;
@@ -107,7 +107,7 @@ body {
     border: none;
     float: left;
     width: 80%;
-    background: black;
+    background: blue;
 }
 
 .overlay input[type=text]:hover {
@@ -139,7 +139,7 @@ body {
 
 <div class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:50px">
-    <span class="w3-jumbo w3-hide-small">A Hub For IT Professionals</span><br>
+    <span class="w3-jumbo">A Hub For IT Professionals</span><br>
 <span class="w3-large">Find IT professionals and their services in your area</span>
 <p class="w3-large">Advertise your Skills and IT services</p>
 <p class="w3-large">Find Software Programmers, Database administrators, Web Designers, Tutors, Software Engineers, Data Analysts, Game Developers, Mobile Developers, Source your IT Labour force, and lots more </p>
@@ -155,8 +155,8 @@ body {
   </div>
 </div>
 
-<button class="openBtn" onclick="openSearch()">Search for posts</button>
-<p><a href="/posts" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">View Posts</a></p>
+<button class="openBtn" onclick="openSearch()">Search for posts <i class="fa fa-search"></i></button>
+<p><a href="/posts" class="w3-button w3-blue w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">View Posts</a></p>
   </div> 
 </div>
 
