--- a/views/postad.ejs
+++ b/views/postad.ejs
@@ -109,20 +109,20 @@ body {
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="form-group">
-                                <label for="product_name">Name: </label>
+                                <label for="name"> <i class="fa fa-user"></i> Name: </label>
                                 <input type="text" id="poster" class="form-control" name="poster" required>
                             </div>
  			<div class="form-group">
-                                <label for="email">Email: </label>
+                                <label for="email"> <i class="fa fa-envelope"></i> Email: </label>
                                 <input type="text" id="email" class="form-control" name="email" required>
                             </div>
 
 			<div class="form-group">
-                                <label for="telephone">Telephone: </label>
+                                <label for="telephone"><i class="fa fa-phone"></i> Telephone: </label>
                                 <input type="tel" id="tel" class="form-control" name="telephone" required>
                             </div>
                            	<div class="form-group">
-                        <label for="category">Category:</label>
+                        <label for="category"><i class="fa fa-th-large"></i> Category:</label>
                             <select name="category"class="form-control" placeholder="category">
                                 <option value="All">All</option>
                                 <option value="Assembly Language">Assembly Language</option>
@@ -144,7 +144,7 @@ body {
                                 <input type="text" id="title" class="form-control" name="title" required>
                             </div>
 				<div class="form-group">
-                                <label for="product_price">Description: </label>
+                                <label for="description"> <i class="fa fa-pencil-square-o"></i> Description: </label>
             			<textarea id="desc" class="form-control"name="body" required></textarea>
 
                             </div>
