--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,13 +26,16 @@ body, html {
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="/" class="w3-bar-item w3-button w3-wide">MYAFRIHUB</a>
+  <div class="w3-bar w3-blue w3-card" id="myNavbar">
+    <a href="/" class="w3-bar-item w3-button w3-wide"><i class="fa fa-home"></i> MY-AFRIHUB</a>
     <!-- Right-sided navbar links -->
     <div class="w3-center w3-hide-small">
       <a href="/posts" class="w3-bar-item w3-button"><i class="fa fa-user"></i> POSTS</a>
       <a href="/postad" class="w3-bar-item w3-button"><i class="fa fa-th"></i> POST ADS</a>
-      <a href="/about" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> About</a>
+    </div>
+
+    <div class="w3-right w3-hide-small">
+      <a href="/about" class="w3-bar-item w3-button"><i class="fa fa-th-large"></i> About us</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -45,7 +48,7 @@ body, html {
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="/" onclick="w3_close()" class="w3-bar-item w3-button">Afrihub</a>
+  <a href="/" onclick="w3_close()" class="w3-bar-item w3-button">My-Afrihub</a>
   <a href="/posts" onclick="w3_close()" class="w3-bar-item w3-button">Posts</a>
   <a href="/postad" onclick="w3_close()" class="w3-bar-item w3-button">Post Ad</a>
 
