--- a/views/post.ejs
+++ b/views/post.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title><%= title %> | Afrihub</title>
+    <title><%= title %> | My Afrihub</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
  <style>
 body {
@@ -91,8 +91,8 @@ body {
             <h2><font color="blue">POST</font></h2>
             <h2><font color="blue"><%= title %></font></h2>
             <p><%= body %></p>
-            <p>Telephone: <%= telephone %></p>
-            <p><font color="green">Created by: <a href="#"><%= poster %></font></a></p>
+            <p><i class="fa fa-phone"></i> Telephone: <%= telephone %></p>
+            <p><font color="green"> <i class="fa fa-user"></i> Created by: <a href="#"><%= poster %></font></a></p>
 	    <p><font color="green">Created on: <%= timestamp %></p></font>
             <hr>
         </div>
@@ -107,15 +107,15 @@ body {
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <div class="form-group">
-                                <label for="product_name">Name: </label>
+                                <label for="name"> <i class="fa fa-user"></i> Name: </label>
                                 <input type="text" id="poster" class="form-control" name="poster">
                             </div>
  			<div class="form-group">
-                                <label for="email">Email: </label>
+                                <label for="email"> <i class="fa fa-envelope"></i> Email: </label>
                                 <input type="text" id="email" class="form-control" name="email" placeholder="Your email here" required>
                             </div>
 				<div class="form-group">
-                                <label for="product_price">Message: </label>
+                                <label for="message"> <i class="fa fa-comment-o"></i> Message: </label>
             			<textarea id="desc" class="form-control"name="body" required></textarea>
 
                             </div>
@@ -125,11 +125,10 @@ body {
                 </form>
             </div>
         </div>
-        <%- include('partials/footer') %>
     </div>
 
 
-
+        <%- include('partials/footer') %>
 
 </body>
 
