--- a/views/home.ejs
+++ b/views/home.ejs
@@ -138,9 +138,10 @@ body {
 <body>
 
 <div class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
+
   <div class="w3-display-left w3-text-white" style="padding:50px">
-    <span class="w3-jumbo">A Hub For IT Professionals</span><br>
-<span class="w3-large">Find IT professionals and their services in your area</span>
+    <span class="w3-jumbo w3-hide-small">A Hub For IT Professionals</span><br>
+<span class="w3-xxlarge w3-hide-small w3-hide-medium">Find IT professionals and their services in your area</span>
 <p class="w3-large">Advertise your Skills and IT services</p>
 <p class="w3-large">Find Software Programmers, Database administrators, Web Designers, Tutors, Software Engineers, Data Analysts, Game Developers, Mobile Developers, Source your IT Labour force, and lots more </p>
 
@@ -159,6 +160,7 @@ body {
 <p><a href="/posts" class="w3-button w3-blue w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">View Posts</a></p>
   </div> 
 </div>
+
 
 
 		
