last but not the least

--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -106,7 +106,7 @@ body {
 	<img src="/img/infotech.jpg">
             <h1>MY Afrihub</h1>
 		</div>
-            <p class="lead">The Hub for Software Technology Solutions..</p>
+            <p class="lead">The Hub for Hardware and Software Technology Solutions..</p>
         </div>
 
         <div class="row">
