--- a/views/home.ejs
+++ b/views/home.ejs
@@ -143,7 +143,7 @@ body {
     <span class="w3-jumbo w3-hide-small">A Hub For IT Professionals</span><br>
 <span class="w3-xxlarge w3-hide-small w3-hide-medium">Find IT professionals and their services in your area</span>
 <p class="w3-large">Advertise your Skills and IT services</p>
-<p class="w3-large">Find Software Programmers, Database administrators, Web Designers, Tutors, Software Engineers, Data Analysts, Game Developers, Mobile Developers, Source your IT Labour force, and lots more </p>
+<p class="w3-large">Find Software Programmers, Database administrators, Web Designers, Computer hardware accessories, Tutors, Software Engineers, Data Analysts, Game Developers, Mobile Developers, Source your IT Labour force, and lots more </p>
 
    
 <div id="myOverlay" class="overlay">
