--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -96,6 +96,77 @@ body {
     width: 100%;
 }
 
+
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 5.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 8.5s;
+  animation-name: fade;
+  animation-duration: 9.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
 </style>
 </head>
         <%- include('partials/navbar') %>
@@ -103,11 +174,73 @@ body {
     <div class="container">
         <div class="jumbotron">
 		<div class="search-background">
-	<img src="/img/infotech.jpg">
-            <h1>MY Afrihub</h1>
+
+
+            <h1>MY-Afri-Tech-Hub</h1>
 		</div>
-            <p class="lead">The Hub for Hardware and Software Technology Solutions..</p>
-        </div>
+            <p class="lead">The Hub for Computer Hardware and Software Technology Solutions..</p>
+
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 6</div>
+  <img src="/img/quantum.jpg" style="width:100%">
+<a href="/quantumcomp" target="_blank" class="w3-jumbo w3-hide-small">What are some Good Books for Learning Quantum Computation?
+</div>
+
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 6</div>
+  <img src="/img/mobile.jpeg" style="width:100%">
+<a href="/mobile-news" target="_blank" class="w3-jumbo w3-hide-small">Top 5 Technologies To Create Android Apps in 2018</a><br>
+
+
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 6</div>
+  <img src="/img/robot.jpeg" style="width:100%">
+<a href="/ai-news2" target="_blank" class="w3-jumbo w3-hide-small">Is an A.I. Capable of Sentience?</a><br>
+
+</div>
+
+
+<div class="mySlides fade">
+  <div class="numbertext">4 / 6</div>
+  <img src="/img/ai.jpg" style="width:100%">
+    <a href="/ai-news" target="_blank" class="w3-jumbo w3-hide-small">Can AI Write Its Own Applications? It's Trickier Than You Think</a><br>
+</div>
+
+
+<div class="mySlides fade">
+  <div class="numbertext">5 / 6</div>
+  <img src="/img/aidream.jpg" style="width:100%">
+<a href="/ai-news1" target="_blank" class="w3-jumbo w3-hide-small">AI, Machine Learning, and Deep Learning: The simplified distinction</a><br>
+</div>
+
+
+<div class="mySlides fade">
+  <div class="numbertext">6 / 6</div>
+  <img src="/img/aivshu.jpg" style="width:100%">
+<a href="/ai-news3" target="_blank" class="w3-jumbo w3-hide-small">How dangerous is AI?</a><br>
+</div>
+</div>
+
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span>
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span>  
+</div>
+
+
 
         <div class="row">
             <div class="col-lg-12">
@@ -157,6 +290,31 @@ body {
     </div>
  	<%- include('partials/footer') %>
 </body>
+
+
+<script>
+var slideIndex = 0;
+
+function showSlides() {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    for (i = 0; i < slides.length; i++) {
+       slides[i].style.display = "none"; 
+
+    }
+    slideIndex++;
+    if (slideIndex > slides.length) {slideIndex = 1}    
+    for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";  
+    dots[slideIndex-1].className += " active";
+    setTimeout("showSlides()", 8000); // Change image every 5 seconds
+}
+showSlides();
+</script>
+
 <footer>
 </footer>
 </html>
