--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -17,7 +17,7 @@
     <h2>Contact</h2>
     <i class="fa fa-phone" style="width:30px"></i> Phone: +2348109616049<br>
     <i class="fa fa-envelope" style="width:30px"> </i> Email: info@myafrihub.com<br>
-  <p class="w3-medium">Copyright &copy; BlueTech 2018. All Rights Reserved. <a href="/terms" target="_blank" class="w3-hover-text-green">Terms and Conditions</a></p>
+  <p class="w3-medium">Copyright &copy; Afriteck 2018. All Rights Reserved. <a href="/terms" target="_blank" class="w3-hover-text-green">Terms and Conditions</a></p>
 </div>
   </ul>
 
